tweaks for responsiveness, fix for overlapping div preveniting artist selection.

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -179,6 +179,9 @@ button {
   text-align: center;
   margin: 0; }
 
+.iconography-top {
+  margin-top: 48px; }
+
 .title {
   text-align: center;
   margin: 0;
@@ -248,7 +251,7 @@ button {
 .ng-leave.ng-leave-active {
   opacity: 0; }
 
-@media (max-width: 500px) {
+@media (max-width: 800px) {
   .mode-copy,
   .modes {
     display: block;
@@ -369,6 +372,19 @@ input[type=range]:focus::-ms-fill-upper {
   font-family: "Violatio", serif;
   font-size: 4.25rem; }
 
+.depeche-mode .iconography-top .icon {
+  position: relative;
+  top: -2.5rem; }
+
+.depeche-mode .iconography-bottom .icon {
+  position: relative;
+  top: -5.5rem; }
+
+.depeche-mode .title,
+.depeche-mode .content {
+  position: relative;
+  top: -4rem; }
+
 .depeche-mode .icon {
   color: #8a181a; }
 
@@ -391,11 +407,17 @@ input[type=range]:focus::-ms-fill-upper {
     margin: 0; }
   .depeche-mode .iconography-top {
     font-size: 10rem; }
+    .depeche-mode .iconography-top .icon {
+      top: -1.5rem; }
+  .depeche-mode .title,
+  .depeche-mode .content {
+    top: -2.5rem; }
   .depeche-mode .iconography-bottom {
     font-size: 5rem; }
     .depeche-mode .iconography-bottom .icon {
       position: relative;
-      right: 0.75rem; } }
+      right: 0.75rem;
+      top: -3.5rem; } }
 
 .depeche-mode a {
   color: #8a181a; }
@@ -446,37 +468,52 @@ input[type=range]:focus::-ms-fill-upper {
 
 .skinny-puppy .title {
   font-family: "Six Caps", serif;
-  font-size: 9rem;
+  font-size: 14rem;
   font-weight: 400;
   text-transform: uppercase;
   color: #32749B;
   margin: 0; }
 
+.skinny-puppy .title,
+.skinny-puppy .content {
+  position: relative;
+  top: -5rem; }
+
 .skinny-puppy .icon {
   color: #555; }
 
 .skinny-puppy .iconography-top {
-  font-size: 16rem;
-  position: relative;
-  left: -2.75rem; }
+  font-size: 16rem; }
+  .skinny-puppy .iconography-top .icon {
+    position: relative;
+    left: -2.75rem;
+    top: -2rem; }
 
 .skinny-puppy .iconography-bottom {
   font-size: 11rem;
   position: relative;
-  top: -2rem; }
+  top: -6rem; }
+
+@media (max-width: 900px) {
+  .skinny-puppy .title {
+    font-size: 10rem; } }
 
 @media (max-width: 800px) {
   .skinny-puppy .title {
-    font-size: 8rem; } }
+    font-size: 8rem; }
+  .skinny-puppy .title,
+  .skinny-puppy .content {
+    position: relative;
+    top: -3.25rem; } }
 
 @media (max-width: 500px) {
   .skinny-puppy .title {
     font-size: 4.5rem;
     margin: 0; }
   .skinny-puppy .iconography-top {
-    font-size: 10rem;
-    position: relative;
-    left: -1.75rem; } }
+    font-size: 10rem; }
+    .skinny-puppy .iconography-top .icon {
+      left: -1.75rem; } }
 
 .skinny-puppy a {
   color: #888; }
